search page changes along with category tags

--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,7 @@
       <script src="app/search/search.module.js"></script>
       <script src="app/forgot-password/forgot-password.module.js"></script>
       <script src="app/add-job-site/add-job-site-module.js"></script>
+      <script src="app/button-load-indicator/btn-load-indicator.module.js"></script>
 
       <script src="app/image-zoom/image.zoom.directive.js"></script>
 
@@ -183,6 +184,7 @@
     <script src="app/search/search-result-grid-view.directive.js"></script>
     <script src="app/menu-aim/menu-aim.directive.js"></script>
     <script src="app/load-indicator/load-indicator.directive.js"></script>
+    <script src="app/button-load-indicator/btn-load-indicator.directive.js"></script>
     <script src="app/autocomplete/ngAutocomplete.js"></script>
 
     <!-- endbuild -->
