Search page related changes

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <![endif]-->
 
     <div ui-view="navbar"></div>
-    <div ui-view autoscroll=""></div>
+    <div ui-view ></div>
     <div ui-view="footer"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
