--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/styles/reset.css"> <!-- CSS reset -->
     <link rel="stylesheet" href="app/styles/style.css"> <!-- Resource style -->
+    <link rel="stylesheet" type="text/css" href="../bower_components/angular-toastr/dist/angular-toastr.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600,800' rel='stylesheet' type='text/css'>
     <link href="../bower_components/fontawesome/css/font-awesome.min.css" rel='stylesheet' type='text/css'/>
@@ -85,6 +86,8 @@
     <script src="../bower_components/valdr/valdr-message.js"></script>
     <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
     <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
+
+    <script type="text/javascript" src="../bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
     <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
 
     <!-- endbuild -->
