finanacial reports annual meeting page press release faq page

--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,7 @@
       <script src="app/add-job-site/add-job-site-module.js"></script>
       <script src="app/scroll-top/scroll-top.module.js"></script>
       <script src="app/button-load-indicator/btn-load-indicator.module.js"></script>
+      <script src="app/faq/faq.module.js"></script>
 
       <script src="app/image-zoom/image.zoom.directive.js"></script>
 
@@ -183,6 +184,7 @@
     <script src="app/search/search-result.controller.js"></script>
     <script src="app/forgot-password/forgot-password.controller.js"></script>
     <script src="app/add-job-site/add-job-site-controller.js"></script>
+    <script src="app/faq/faq.controller.js"></script>
 
     <script src="app/search/search-result-list-view.directive.js"></script>
     <script src="app/search/search-result-grid-view.directive.js"></script>
