Shopping cart changes

--- a/src/index.html
+++ b/src/index.html
@@ -129,6 +129,7 @@
       <script src="app/scroll-top/scroll-top.module.js"></script>
       <script src="app/button-load-indicator/btn-load-indicator.module.js"></script>
       <script src="app/faq/faq.module.js"></script>
+      <script src="app/shopping-cart/shopping-cart.module.js"></script>
 
       <script src="app/image-zoom/image.zoom.directive.js"></script>
 
@@ -141,6 +142,7 @@
     <script src="app/user-profile/user-profile.constant.js"></script>
     <script src="app/login/login.constant.js"></script>
     <script src="app/portal-access/portal-access.constant.js"></script>
+    <script src="app/shopping-cart/shopping-cart.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/invoices/invoices.constant.js"></script>
     <script src="app/quota-n-reservations/quota-n-reservations.constant.js"></script>
@@ -167,6 +169,7 @@
     <script src="app/terms-and-conditions/terms-and-conditions.controller.js"></script>
     <script src="app/activate-user/activate-user.controller.js"></script>
     <script src="app/header/header.controller.js"></script>
+    <script src="app/shopping-cart/shopping-cart.controller.js"></script>
     <script src="app/invoices/invoices.controller.js"></script>
     <script src="app/my-catalogue/my-catalogue.controller.js"></script>
     <script src="app/manage-my-account/manage-my-account.controller.js"></script>
