dashboard main ctrl added

--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,7 @@
     <script src="app/prelogin-header/prelogin-header.controller.js"></script>
     <script src="app/user-profile/user-profile.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
+    <script src="app/dashboard-main/dashboard-main.controller.js"></script>
     <script src="app/portal-access/portal-access.controller.js"></script>
     <script src="app/quota-n-reservations/quota-n-reservations.controller.js"></script>
     <script src="app/terms-and-conditions/terms-and-conditions.controller.js"></script>
