--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,7 @@
     <script src="app/user-profile/user-profile.constant.js"></script>
     <script src="app/login/login.constant.js"></script>
     <script src="app/portal-access/portal-access.constant.js"></script>
+    <script src="app/add-job-site/add-job-site.constant.js"></script>
     <script src="app/cart/cart.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/invoices/invoices.constant.js"></script>
@@ -209,5 +210,6 @@
         <span ng-bind-html="match.label | typeaheadHighlight:query"></span>
       </a>
     </script>
+
   </body>
 </html>
