Google map changes

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <link href="app/styles/media.css" rel="stylesheet">
     <link href="app/styles/custom.css" rel="stylesheet">
     <!-- endbuild -->
-    <script src='http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false'></script>
+    <script src='https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false'></script>
 
   </head>
   <body class="skin-blue prelogin">
