--- a/src/index.html
+++ b/src/index.html
@@ -76,11 +76,9 @@
     <script src="../bower_components/lodash/lodash.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
-    <script src="../bower_components/angular-google-maps/dist/angular-google-maps-street-view.min.js"></script>
     <script src="../bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="../bower_components/ng-file-upload/ng-file-upload-all.min.js"></script>
     <script src="../bower_components/jquery-zoom/jquery.zoom.js"></script>
-    <script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="../bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
     <script src="../bower_components/valdr/valdr.js"></script>
     <script src="../bower_components/valdr/valdr-message.js"></script>
@@ -115,7 +113,7 @@
       <script src="app/terms-and-conditions/terms-and-conditions.module.js"></script>
       <script src="app/invoices/invoices.module.js"></script>
       <script src="app/equipment-detail/equipment-detail.module.js"></script>
-      <script src="app/manage-jobsites/manage-jobsites.module.js"></script>
+      <script src="app/jobsites/jobsites.module.js"></script>
       <script src="app/portal-access/portal-access.module.js"></script>
       <script src="app/quota-n-reservations/quota-n-reservations.module.js"></script>
       <script src="app/equipment-reserve/equipment-reserve.module.js"></script>
@@ -125,7 +123,6 @@
       <script src="app/request-callback/request-callback.module.js"></script>
       <script src="app/search/search.module.js"></script>
       <script src="app/forgot-password/forgot-password.module.js"></script>
-      <script src="app/add-job-site/add-job-site-module.js"></script>
       <script src="app/scroll-top/scroll-top.module.js"></script>
       <script src="app/button-load-indicator/btn-load-indicator.module.js"></script>
       <script src="app/faq/faq.module.js"></script>
@@ -142,7 +139,6 @@
     <script src="app/user-profile/user-profile.constant.js"></script>
     <script src="app/login/login.constant.js"></script>
     <script src="app/portal-access/portal-access.constant.js"></script>
-    <script src="app/add-job-site/add-job-site.constant.js"></script>
     <script src="app/cart/cart.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/invoices/invoices.constant.js"></script>
@@ -150,6 +146,7 @@
     <script src="app/forgot-password/forgot-password.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
     <script src="app/manage-my-account/manage-my-account.constant.js"></script>
+    <script src="app/jobsites/jobsites.constant.js"></script>
     <script src="app/my-catalogue/my-catalogue.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
     <script src="app/equipment-reserve/equipment-reserve.constant.js"></script>
@@ -177,7 +174,7 @@
     <script src="app/invoices/invoices.controller.js"></script>
     <script src="app/my-catalogue/my-catalogue.controller.js"></script>
     <script src="app/manage-my-account/manage-my-account.controller.js"></script>
-    <script src="app/manage-jobsites/manage-jobsites.controller.js"></script>
+    <script src="app/jobsites/jobsites.controller.js"></script>
     <script src="app/equipment-sell/equipment-sell.controller.js"></script>
     <script src="app/equipment-detail/equipment-detail.controller.js"></script>
     <script src="app/equipment-reserve/equipment-reserve.controller.js"></script>
@@ -190,7 +187,8 @@
     <script src="app/search/search.controller.js"></script>
     <script src="app/search/search-result.controller.js"></script>
     <script src="app/forgot-password/forgot-password.controller.js"></script>
-    <script src="app/add-job-site/add-job-site-controller.js"></script>
+    <script src="app/jobsites/add-jobsite.controller.js"></script>
+    <script src="app/jobsites/edit-jobsite.controller.js"></script>
     <script src="app/faq/faq.controller.js"></script>
 
     <script src="app/search/search-result-list-view.directive.js"></script>
