shopping cart pages done with responsive

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
+    <link rel="stylesheet" href="app/styles/progress-wizard.min.css">
     <link rel="stylesheet" href="app/styles/reset.css"> <!-- CSS reset -->
     <link rel="stylesheet" href="app/styles/style.css"> <!-- Resource style -->
     <link rel="stylesheet" type="text/css" href="../bower_components/angular-toastr/dist/angular-toastr.css" />
