Cart page changes

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,11 @@
 <html ng-app="HeavyMetals">
   <head>
     <meta charset="utf-8">
-    <title>heavyMetals</title>
+    <title>Noble Iron</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- FontAwesome 4.3.0 -->
-    <!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />-->
-    <!-- Ionicons 2.0.0 -->
-    <!--<link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />-->
-    <!-- Theme style -->
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
 
+    <meta name="viewport" content="width=device-width">
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/styles/progress-wizard.min.css">
     <link rel="stylesheet" href="app/styles/reset.css"> <!-- CSS reset -->
@@ -20,11 +15,9 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600,800' rel='stylesheet' type='text/css'>
     <link href="../bower_components/fontawesome/css/font-awesome.min.css" rel='stylesheet' type='text/css'/>
-
     <!-- endbuild -->
 
     <!-- build:css({.tmp/serve,src}) styles/app.css -->
-
     <link href="app/styles/main.css" rel="stylesheet">
     <link href="app/styles/media.css" rel="stylesheet">
     <link href="app/styles/custom.css" rel="stylesheet">
