cart page changes

--- a/src/index.html
+++ b/src/index.html
@@ -188,6 +188,7 @@
     <script src="app/menu-aim/menu-aim.directive.js"></script>
     <script src="app/load-indicator/load-indicator.directive.js"></script>
     <script src="app/button-load-indicator/btn-load-indicator.directive.js"></script>
+    <script src="app/shared/is-empty.filter.js"></script>
     <script src="app/autocomplete/ngAutocomplete.js"></script>
 
     <!-- endbuild -->
