--- a/src/index.html
+++ b/src/index.html
@@ -184,6 +184,8 @@
 
     <script src="app/search/search-result-list-view.directive.js"></script>
     <script src="app/search/search-result-grid-view.directive.js"></script>
+    <script src="app/jobsites/jobsite-list-view.directive.js"></script>
+    <script src="app/jobsites/jobsite-map-view.directive.js"></script>
     <script src="app/scroll-top/scroll-top.directive.js"></script>
     <script src="app/menu-aim/menu-aim.directive.js"></script>
     <script src="app/load-indicator/load-indicator.directive.js"></script>
