--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
     <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
     <script src="../bower_components/card/lib/js/card.js"></script>
     <script src="../bower_components/angular-card/src/card.js"></script>
+    <script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
 
     <script type="text/javascript" src="../bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
     <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
@@ -92,6 +93,7 @@
 
     <!-- Modules -->
       <script src="app/core/hm.core.request.interceptor.js"></script>
+      <script src="app/core/hm.core.response.interceptor.js"></script>
       <script src="app/routes/routes.module.js"></script>
       <script src="app/hm/heavy-metals.module.js"></script>
       <script src="app/global/global.module.js"></script>
