Equipment page changes

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <![endif]-->
 
     <div ui-view="navbar"></div>
-    <div ui-view></div>
+    <div ui-view autoscroll='false'></div>
     <div ui-view="footer"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -81,6 +81,9 @@
     <script src="../bower_components/card/lib/js/card.js"></script>
     <script src="../bower_components/angular-card/src/card.js"></script>
     <script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
+    <script src="../bower_components/moment/moment.js"></script>
+    <script src="../bower_components/angular-moment/angular-moment.js"></script>
+    <script src="../bower_components/humanize-duration/humanize-duration.js"></script>
 
     <script type="text/javascript" src="../bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
     <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
