--- a/src/index.html
+++ b/src/index.html
@@ -189,6 +189,7 @@
     <script src="app/jobsites/edit-jobsite.controller.js"></script>
     <script src="app/faq/faq.controller.js"></script>
     <script src="app/cart/cart-review.controller.js"></script>
+    <script src="app/cart/cart-payment.controller.js"></script>
 
     <script src="app/search/search-result-list-view.directive.js"></script>
     <script src="app/search/search-result-grid-view.directive.js"></script>
