--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
       <script src="app/faq/faq.module.js"></script>
       <script src="app/cart/cart.module.js"></script>
 
-      <script src="app/image-zoom/image.zoom.directive.js"></script>
+      <script src="app/image-util/image.zoom.directive.js"></script>
 
     <!-- End Modules -->
 
@@ -200,6 +200,7 @@
     <script src="app/menu-aim/menu-aim.directive.js"></script>
     <script src="app/load-indicator/load-indicator.directive.js"></script>
     <script src="app/button-load-indicator/btn-load-indicator.directive.js"></script>
+    <script src="app/image-util/image-err-src.directive.js"></script>
     <script src="app/shared/is-empty.filter.js"></script>
     <script src="app/autocomplete/ngAutocomplete.js"></script>
 
