Cart access rules

--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,7 @@
       <script src="app/button-load-indicator/btn-load-indicator.module.js"></script>
       <script src="app/faq/faq.module.js"></script>
       <script src="app/cart/cart.module.js"></script>
+      <script src="app/cart/cart-access-rules.service.js"></script>
 
       <script src="app/image-util/image.zoom.directive.js"></script>
 
