--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
     <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
     <script src="../bower_components/card/lib/js/card.js"></script>
     <script src="../bower_components/angular-card/src/card.js"></script>
-    <script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
+
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/angular-moment/angular-moment.js"></script>
     <script src="../bower_components/humanize-duration/humanize-duration.js"></script>
@@ -130,6 +130,7 @@
       <script src="app/cart/cart-access-rules.service.js"></script>
 
       <script src="app/image-util/image.zoom.directive.js"></script>
+      <script src="app/bootstrap-ui-datetime-picker/datetime-picker.js"></script>
 
     <!-- End Modules -->
 
