order details page

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
       <script src="app/faq/faq.module.js"></script>
       <script src="app/cart/cart.module.js"></script>
       <script src="app/cart/cart-access-rules.service.js"></script>
-
+      <script src="app/quotes-detail/quote-details.module.js"></script>
       <script src="app/image-util/image.zoom.directive.js"></script>
       <script src="app/bootstrap-ui-datetime-picker/datetime-picker.js"></script>
 
@@ -147,6 +147,7 @@
     <script src="app/quota-n-reservations/quota-n-reservations.constant.js"></script>
     <script src="app/forgot-password/forgot-password.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
+    <script src="app/quotes-detail/quote-details.constant.js"></script>
     <script src="app/jobsites/jobsites.constant.js"></script>
     <script src="app/my-catalogue/my-catalogue.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
@@ -155,6 +156,7 @@
     <script src="app/request-callback/request-callback.constant.js"></script>
     <script src="app/prelogin-header/prelogin-header.constant.js"></script>
     <script src="app/equipment-detail/equipment-details.constant.js"></script>
+    <script src="app/equipment-reserve-success/equipment-reserve-success.constant.js"></script>
 
 
     <script src="app/validation/validation.constraints.constant.js"></script>
@@ -174,6 +176,7 @@
     <script src="app/cart/cart-update-jobsite.controller.js"></script>
     <script src="app/invoices/invoices.controller.js"></script>
     <script src="app/my-catalogue/my-catalogue.controller.js"></script>
+    <script src="app/quotes-detail/quote-details.controller.js"></script>
     <script src="app/jobsites/jobsites.controller.js"></script>
     <script src="app/equipment-sell/equipment-sell.controller.js"></script>
     <script src="app/equipment-detail/equipment-detail.controller.js"></script>
