menu aim changes

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <link href="app/styles/main.css" rel="stylesheet">
     <link href="app/styles/media.css" rel="stylesheet">
     <link href="app/styles/custom.css" rel="stylesheet">
+
     <!-- endbuild -->
     <script src='//maps.googleapis.com/maps/api/js?libraries=places&sensor=false'></script>
 
@@ -84,6 +85,7 @@
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/angular-moment/angular-moment.js"></script>
     <script src="../bower_components/humanize-duration/humanize-duration.js"></script>
+    <script src="../bower_components/angular-click-outside/clickoutside.directive.js"></script>
 
     <script type="text/javascript" src="../bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
     <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
