Allow Substitution changes

--- a/src/index.html
+++ b/src/index.html
@@ -81,11 +81,9 @@
     <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
     <script src="../bower_components/card/lib/js/card.js"></script>
     <script src="../bower_components/angular-card/src/card.js"></script>
-
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/angular-moment/angular-moment.js"></script>
     <script src="../bower_components/humanize-duration/humanize-duration.js"></script>
-    <script src="../bower_components/angular-click-outside/clickoutside.directive.js"></script>
 
     <script type="text/javascript" src="../bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
     <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
@@ -198,6 +196,7 @@
     <script src="app/cart/cart-review.controller.js"></script>
     <script src="app/cart/cart-payment.controller.js"></script>
     <script src="app/cart/cart-duration.controller.js"></script>
+    <script src="app/cart/allow-substitution.controller.js"></script>
 
     <script src="app/search/search-result-list-view.directive.js"></script>
     <script src="app/search/search-result-grid-view.directive.js"></script>
