--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
       //   })
       //   .install()
     </script>
+    <script src="../bower_components/angular-morph/dist/angular-morph.min.js"></script>
     <script src="../bower_components/bootstrap/js/dropdown.js"></script>
     <script src="../bower_components/angular-raven/angular-raven.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
