--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
     <script src="../bower_components/valdr/valdr.js"></script>
     <script src="../bower_components/valdr/valdr-message.js"></script>
     <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
-    <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
+    <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
     <script src="../bower_components/card/lib/js/card.js"></script>
     <script src="../bower_components/angular-card/src/card.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
