--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <!-- endbuild -->
 
     <!-- build:css({.tmp/serve,src}) styles/app.css -->
+    <link href="app/styles/animate.css" rel="stylesheet">
     <link href="app/styles/main.css" rel="stylesheet">
     <link href="app/styles/media.css" rel="stylesheet">
     <link href="app/styles/custom.css" rel="stylesheet">
@@ -88,6 +89,7 @@
 
     <script type="text/javascript" src="../bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
     <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
+    <script type="text/javascript" src="../bower_components/ngSmoothScroll/lib/angular-smooth-scroll.js"></script>
 
     <!-- endbuild -->
 
