URL tweaks with HTML5 mode

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ng-app="HeavyMetals">
   <head>
+    <base href="/">
     <meta charset="utf-8">
     <title>Noble Iron</title>
     <meta name="description" content="">
