--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
       <script src="app/cart/cart.module.js"></script>
       <script src="app/cart/cart-access-rules.service.js"></script>
       <script src="app/quotes-detail/quote-details.module.js"></script>
-      <script src="app/components/image-util/image.zoom.directive.js"></script>
+      <script src="app/components/utils/image.zoom.directive.js"></script>
       <script src="app/components/bootstrap-ui-datetime-picker/datetime-picker.js"></script>
 
     <!-- End Modules -->
@@ -158,7 +158,7 @@
     <script src="app/equipment-reserve/equipment-reserve.constant.js"></script>
     <script src="app/components/header/header.constant.js"></script>
     <script src="app/request-callback/request-callback.constant.js"></script>
-    <script src="app/prelogin-header/prelogin-header.constant.js"></script>
+    <script src="app/components/prelogin-header/prelogin-header.constant.js"></script>
     <script src="app/equipment-detail/equipment-details.constant.js"></script>
     <script src="app/equipment-reserve-success/equipment-reserve-success.constant.js"></script>
 
@@ -166,7 +166,7 @@
     <script src="app/components/validation/validation.constraints.constant.js"></script>
     <script src="app/core/rest.service.js"></script>
     <script src="app/core/hm.core.client-store.service.js"></script>
-    <script src="app/prelogin-header/prelogin-header.controller.js"></script>
+    <script src="app/components/prelogin-header/prelogin-header.controller.js"></script>
     <script src="app/user-profile/user-profile.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
     <script src="app/dashboard-main/dashboard-main.controller.js"></script>
@@ -210,8 +210,8 @@
     <script src="app/components/menu-aim/menu-aim.directive.js"></script>
     <script src="app/components/load-indicator/load-indicator.directive.js"></script>
     <script src="app/components/button-load-indicator/btn-load-indicator.directive.js"></script>
-    <script src="app/components/image-util/image-err-src.directive.js"></script>
-    <script src="app/shared/is-empty.filter.js"></script>
+    <script src="app/components/utils/image-err-src.directive.js"></script>
+    <script src="app/components/utils/is-empty.filter.js"></script>
     <script src="app/components/autocomplete/ngAutocomplete.js"></script>
 
     <!-- endbuild -->
