requests page track order burron on landing page and quotes detail ui

--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,7 @@
       <script src="app/components/utils/image.zoom.directive.js"></script>
       <script src="app/components/bootstrap-ui-datetime-picker/datetime-picker.js"></script>
       <script src="app/view-contracts/contracts.module.js"></script>
+      <script src="app/requests/requests.module.js"></script>
 
     <!-- End Modules -->
 
@@ -203,6 +204,7 @@
     <script src="app/cart/cart-duration.controller.js"></script>
     <script src="app/cart/allow-substitution.controller.js"></script>
     <script src="app/view-contracts/contracts.controller.js"></script>
+    <script src="app/requests/requests.controller.js"></script>
 
     <script src="app/search/search-result-list-view.directive.js"></script>
     <script src="app/search/search-result-grid-view.directive.js"></script>
