Team and board of director api changes

--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,7 @@
       <script src="app/search/search.module.js"></script>
       <script src="app/forgot-password/forgot-password.module.js"></script>
       <script src="app/components/scroll-top/scroll-top.module.js"></script>
+      <script src="app/board-of-directors/board-of-directors.module.js"></script>
       <script src="app/components/button-load-indicator/btn-load-indicator.module.js"></script>
       <script src="app/faq/faq.module.js"></script>
       <script src="app/cart/cart.module.js"></script>
@@ -137,6 +138,7 @@
       <script src="app/components/bootstrap-ui-datetime-picker/datetime-picker.js"></script>
       <script src="app/view-contracts/contracts.module.js"></script>
       <script src="app/requests/requests.module.js"></script>
+      <script src="app/team/team.module.js"></script>
 
     <!-- End Modules -->
 
@@ -150,6 +152,7 @@
     <script src="app/cart/cart.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/invoices/invoices.constant.js"></script>
+    <script src="app/team/team.constant.js"></script>
     <script src="app/quota-n-reservations/quota-n-reservations.constant.js"></script>
     <script src="app/forgot-password/forgot-password.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
@@ -162,6 +165,7 @@
     <script src="app/request-callback/request-callback.constant.js"></script>
     <script src="app/components/prelogin-header/prelogin-header.constant.js"></script>
     <script src="app/equipment-detail/equipment-details.constant.js"></script>
+    <script src="app/board-of-directors/board-of-directors.constant.js"></script>
     <script src="app/equipment-reserve-success/equipment-reserve-success.constant.js"></script>
 
 
@@ -170,6 +174,7 @@
     <script src="app/core/hm.core.client-store.service.js"></script>
     <script src="app/components/prelogin-header/prelogin-header.controller.js"></script>
     <script src="app/user-profile/user-profile.controller.js"></script>
+    <script src="app/board-of-directors/board-of-directors.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
     <script src="app/dashboard-main/dashboard-main.controller.js"></script>
     <script src="app/portal-access/portal-access.controller.js"></script>
@@ -205,6 +210,7 @@
     <script src="app/cart/allow-substitution.controller.js"></script>
     <script src="app/view-contracts/contracts.controller.js"></script>
     <script src="app/requests/requests.controller.js"></script>
+    <script src="app/team/team.controller.js"></script>
 
     <script src="app/search/search-result-list-view.directive.js"></script>
     <script src="app/search/search-result-grid-view.directive.js"></script>
