Press release changes

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,7 @@
       <script src="app/board-of-directors/board-of-directors.module.js"></script>
       <script src="app/components/button-load-indicator/btn-load-indicator.module.js"></script>
       <script src="app/faq/faq.module.js"></script>
+      <script src="app/press-releases/press-releases.module.js"></script>
       <script src="app/cart/cart.module.js"></script>
       <script src="app/cart/cart-access-rules.service.js"></script>
       <script src="app/quotes-detail/quote-details.module.js"></script>
@@ -147,6 +148,7 @@
     <script src="app/global/global.constant.js"></script>
     <script src="app/activate-user/activate-user.constant.js"></script>
     <script src="app/user-profile/user-profile.constant.js"></script>
+    <script src="app/press-releases/press-releases.constant.js"></script>
     <script src="app/login/login.constant.js"></script>
     <script src="app/portal-access/portal-access.constant.js"></script>
     <script src="app/cart/cart.constant.js"></script>
@@ -176,6 +178,7 @@
     <script src="app/user-profile/user-profile.controller.js"></script>
     <script src="app/board-of-directors/board-of-directors.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
+    <script src="app/press-releases/press-releases.controller.js"></script>
     <script src="app/dashboard-main/dashboard-main.controller.js"></script>
     <script src="app/portal-access/portal-access.controller.js"></script>
     <script src="app/quota-n-reservations/quota-n-reservations.controller.js"></script>
