Financial reports API Integration

--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,7 @@
       <script src="app/components/button-load-indicator/btn-load-indicator.module.js"></script>
       <script src="app/faq/faq.module.js"></script>
       <script src="app/press-releases/press-releases.module.js"></script>
+      <script src="app/financial-reports/financial-reports.module.js"></script>
       <script src="app/cart/cart.module.js"></script>
       <script src="app/cart/cart-access-rules.service.js"></script>
       <script src="app/quotes-detail/quote-details.module.js"></script>
@@ -154,6 +155,7 @@
     <script src="app/cart/cart.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/invoices/invoices.constant.js"></script>
+    <script src="app/financial-reports/financial-reports.constant.js"></script>
     <script src="app/team/team.constant.js"></script>
     <script src="app/quota-n-reservations/quota-n-reservations.constant.js"></script>
     <script src="app/forgot-password/forgot-password.constant.js"></script>
@@ -179,6 +181,7 @@
     <script src="app/board-of-directors/board-of-directors.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
     <script src="app/press-releases/press-releases.controller.js"></script>
+    <script src="app/financial-reports/financial-reports.controller.js"></script>
     <script src="app/dashboard-main/dashboard-main.controller.js"></script>
     <script src="app/portal-access/portal-access.controller.js"></script>
     <script src="app/quota-n-reservations/quota-n-reservations.controller.js"></script>
